--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
+    "axios": "^0.19.0",
     "clsx": "latest",
     "connected-react-router": "^6.5.2",
     "history": "^4.7.2",
@@ -21,7 +22,8 @@
     "react-router": "^4.3.1 || ^5.0.0",
     "react-scripts": "latest",
     "redux": "^4.0.4",
-    "redux-logger": "^3.0.6"
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "browserslist": {
     "production": [
