--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "latest",
     "react-dom": "latest",
     "react-redux": "^7.1.1",
-    "react-router": "^4.3.1 || ^5.0.0",
+    "react-router": "^5.1.1",
+    "react-router-dom": "^5.1.1",
     "react-scripts": "latest",
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
