--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@material-ui/core": "^4.4.3",
     "@material-ui/icons": "^4.4.3",
     "axios": "^0.19.0",
-    "clsx": "latest",
+    "clsx": "^1.0.4",
     "connected-react-router": "^6.5.2",
     "history": "^4.7.2",
     "lodash": "^4.17.15",
